changes in grid_flexbox

--- a/grid_and_flexbox_Tasks/grid_flexbox.html
+++ b/grid_and_flexbox_Tasks/grid_flexbox.html
@@ -10,81 +10,93 @@
 
 <body>
     <main class="testinomial-grid">
-        <article class="testinomial item1">
-            <div class="flex">
-                <div>
-                    <img src="../img_5terre.jpg" alt="">
+        <article class="testinomial item1 grid-row-span-2 full" style="background-color: #f1f1f1;">
+            <div class="center">
+                <div class="flex">
+                    <div>
+                        <img src="../img_5terre.jpg" alt="">
+                    </div>
+                    <div>
+                        <h2 class="name">Jaydeep Kacha</h2>
+                    </div>
                 </div>
-                <div>
-                    <h2 class="name">Jaydeep Kacha</h2>
-                </div>
+                <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..." "There is
+                    no one who loves pain itself, who seeks after it and wants to have it, simply because it is pain..."</p>
             </div>
-            <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..." "There is
-                no one who loves pain itself, who seeks after it and wants to have it, simply because it is pain..."</p>
         </article>
 
-        <article class="testinomial item1">
-            <div class="flex">
-                <div>
-                    <img src="../img_5terre.jpg" alt="">
+        <article class="testinomial item1 grid-col-span-2" style="background-color: #f1f1f1;">
+            <div class="center">
+                <div class="flex">
+                    <div>
+                        <img src="../img_5terre.jpg" alt="">
+                    </div>
+                    <div>
+                        <h2 class="name">Jaydeep Kacha</h2>
+                    </div>
                 </div>
-                <div>
-                    <h2 class="name">Jaydeep Kacha</h2>
-                </div>
+                <p>"There is no one who loves pain itself, who seeks after it and wants to have it, simply because it is
+                    pain...</p>
             </div>
-            <p>"There is no one who loves pain itself, who seeks after it and wants to have it, simply because it is
-                pain...</p>
         </article>
 
-        <article class="testinomial">
-            <div class="flex">
-                <div>
-                    <img src="../img_5terre.jpg" alt="">
+        <article class="testinomial item3 grid-row-span-2" style="background-color: #f1f1f1;">
+            <div class="center">
+                <div class="flex">
+                    <div>
+                        <img src="../img_5terre.jpg" alt="">
+                    </div>
+                    
+                    <div>
+                        <h2 class="name">Jaydeep Kacha</h2>
+                    </div>
                 </div>
-
-                <div>
-                    <h2 class="name">Jaydeep Kacha</h2>
-                </div>
+                <p>"There is no one who loves pain itself, who seeks after it and wants to have it, simply because it is
+                    pain...</p>
             </div>
-            <p>"There is no one who loves pain itself, who seeks after it and wants to have it, simply because it is
-                pain...</p>
+        </article>
+        <article class="testinomial gradient radius-four" style="background-color: #f1f1f1;">
+            <div class="center-four">
+                <div class="flex">
+                    <div>
+                        <img src="../img_5terre.jpg" alt="">
+                    </div>
+                    <div>
+                        <h2 class="name">Jaydeep Kacha</h2>
+                    </div>
+                    </div>
+                        <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..." "There is
+                        no one who loves pain itself, who seeks after it and wants to have it, simply because it is pain..."</p>
+                    </div>
+            
+        </article>
+        <article class="testinomial gradient-2 radius-four" style="background-color: #f1f1f1;">
+            <div class="center-four">
+                <div class="flex">
+                    <div>
+                        <img src="../img_5terre.jpg" alt="">
+                    </div>
+                    <div>
+                        <h2 class="name">Jaydeep Kacha</h2>
+                    </div>
+                </div>
+                <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...</p>
+            </div>
         </article>
 
-        <article class="testinomial item1">
-            <div class="flex">
-                <div>
-                    <img src="../img_5terre.jpg" alt="">
-                </div>
-                <div>
-                    <h2 class="name">Jaydeep Kacha</h2>
-                </div>
-            </div>
-            <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..." "There is
-                no one who loves pain itself, who seeks after it and wants to have it, simply because it is pain..."</p>
-        </article>
+        <article class="testinomial item6" style="background-color: #f1f1f1;">
+            <div class="center">
 
-        <article class="testinomial ">
-            <div class="flex">
-                <div>
-                    <img src="../img_5terre.jpg" alt="">
+                <div class="flex">
+                    <div>
+                        <img src="../img_5terre.jpg" alt="">
+                    </div>
+                    <div>
+                        <h2 class="name">Jaydeep Kacha</h2>
+                    </div>
                 </div>
-                <div>
-                    <h2 class="name">Jaydeep Kacha</h2>
-                </div>
+                <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."</p>
             </div>
-            <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...</p>
-        </article>
-
-        <article class="testinomial">
-            <div class="flex">
-                <div>
-                    <img src="../img_5terre.jpg" alt="">
-                </div>
-                <div>
-                    <h2 class="name">Jaydeep Kacha</h2>
-                </div>
-            </div>
-            <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."</p>
         </article>
     </main>
 </body>
