changes center and remove .item1

--- a/grid_and_flexbox_Tasks/grid_flexbox.html
+++ b/grid_and_flexbox_Tasks/grid_flexbox.html
@@ -10,7 +10,7 @@
 
 <body>
     <main class="testinomial-grid">
-        <article class="testinomial item1 grid-row-span-2 full" style="background-color: #f1f1f1;">
+        <article class="testinomial grid-row-span-2 full" style="background-color: #f1f1f1;">
                 <div class="flex">
                     <div>
                         <img src="../img_5terre.jpg" alt="">
@@ -49,6 +49,7 @@
                 <p>"There is no one who loves pain itself, who seeks after it and wants to have it, simply because it is
                     pain...</p>
         </article>
+        
         <article class="testinomial gradient radius-four" style="background-color: #f1f1f1;">
             <div class="center-four">
                 <div class="flex">
@@ -61,8 +62,10 @@
                     </div>
                         <p>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..." "There is
                         no one who loves pain itself, who seeks after it and wants to have it, simply because it is pain..."</p>
-                    </div>
+                
+            </div>
         </article>
+
         <article class="testinomial gradient-2 radius-four" style="background-color: #f1f1f1;">
             <div class="center-four">
                 <div class="flex">
