to changes in class flex to justify

--- a/grid_and_flexbox_Tasks/grid_flexbox.html
+++ b/grid_and_flexbox_Tasks/grid_flexbox.html
@@ -29,7 +29,7 @@
 
         <article class="testinomial grid-col-span-2 item1" style="background-color: #f1f1f1;">
             <div class="center">
-                <div class="flex">
+                <div class="justify">
                     <div>
                         <img src="../img_5terre.jpg" alt="">
                     </div>
