--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <a href="./grid_and_flexbox_Tasks/grid_flexbox.html" target="_blank">grid_flexbox</a>
                 <a href="./grid_and_flexbox_Tasks/try.html" target="_blank">try</a>
                 <a href="./grid_and_flexbox_Tasks/git_hub/grid.html" target="_blank">grid</a>
+                <a href="./positivus_Landing_Page/landing_Page.html" target="_blank">Landing_Page</a>
             </div>
         </details>
 
