--- a/positivus_Landing_Page/landing_Page.html
+++ b/positivus_Landing_Page/landing_Page.html
@@ -8,35 +8,32 @@
     <link rel="stylesheet" href="./landing_Page.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
 </head>
 
 <body>
-    <header class="header">
-        <img src="./png/Logo.png" alt="Logo_Image" class="logo">
-        <ul>
-            <li><a href="#">About us</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Use Cases</a></li>
-            <li><a href="#">Pricing</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">Request a quote</a></li>
-        </ul>
-    </header>
+    <div class="main">
+        <nav>
+            <span><img src="./png/Logo.png" alt="Logo"></span>
+            <ul>
+                <li><a href="#">About us</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Use Cases</a></li>
+                <li><a href="#">Pricing</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Request a quote</a></li>
+                <li><img class="hide" src="./png/Burger menu icon.png" alt="Burger menu icon"></li>
+            </ul>
+        </nav>
+    </div>
 
-    <main>
-        <aside>
-            <img src="./png/Illustration.png" alt="illustration" class="side">
-        </aside>
-        <section>
-            <h1>Navigating the digital landscape for success</h1>
-            <p>Our digital marketing agency helps businesses grow and succeed online through a range of services
-                including SEO, PPC, social media marketing, and content creation.</p>
-            <button class="btn btn1">Book a consultation</button>
-        </section>
-    </main>
+    <header>
+    </header>
+    
+    <section>
+        <h1>Navigating the digital landscape for success</h1>
+    </section>
 </body>
 
 </html>
