--- a/positivus_Landing_Page/landing_Page.html
+++ b/positivus_Landing_Page/landing_Page.html
@@ -26,22 +26,21 @@
                 <li><a href="#">Pricing</a></li>
                 <li><a href="#">Blog</a></li>
                 <li><a href="#">Request a quote</a></li>
-                <li><img class="hide" src="./png/Burger menu icon.png" alt="Burger menu icon"></li>
             </div>
         </nav>
     </header>
 
-        <div class="main">
-            <div class="side">
-                <h1>Navigating the digital landscape for success</h1>
-            </div>
-            <div class="right">
-                <img src="./png/Illustration.png" alt="Illustration" class="image">
-            </div>
-            <div class="left">
-                <p>Our digital marketing agency helps businesses grow and succeed online through a range of services including
-                    SEO, PPC, social media marketing, and content creation.</p>
-            </div>
+    <div class="main">
+        <div class="left-sidebar">
+            <h1>Navigating the digital landscape for success</h1>
+            <p>Our digital marketing agency helps businesses grow and succeed online through a range of services
+                including
+                SEO, PPC, social media marketing, and content creation.</p>
+            <button class="btn">Book a consultation
+            </button>
+        </div>
+        <div class="right-sidebar">
+            <img src="./png/Illustration.png" alt="Illustration" class="image">
         </div>
     </div>
 </body>
