add sidebar and delete .json file

--- a/positivus_Landing_Page/landing_Page.html
+++ b/positivus_Landing_Page/landing_Page.html
@@ -15,19 +15,27 @@
 
 <body>
     <header>
-        <nav>
-            <div>
-                <img src="./png/Logo.png" alt="Logo">
-            </div>
-            <div class="nav">
-                <li><a href="#">About us</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Use Cases</a></li>
-                <li><a href="#">Pricing</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Request a quote</a></li>
-            </div>
-        </nav>
+                <nav>
+                    <div>
+                        <img src="./png/Logo.png" alt="Logo">
+                    </div>
+                <label>
+                       <input type="checkbox">
+                            <div class="toggle">
+                                <span class="top_line common"></span>
+                                <span class="middle_line common"></span>
+                                <span class="bottom_line common"></span>
+                            </div>
+                    <div class="nav slide">
+                        <li><a href="#">About us</a></li>
+                        <li><a href="#">Services</a></li>
+                        <li><a href="#">Use Cases</a></li>
+                        <li><a href="#">Pricing</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <button class="btn1">Request a quote</button>
+                    </div>
+                </label>
+                </nav>
     </header>
 
     <div class="main">
