--- a/positivus_Landing_Page/landing_Page.html
+++ b/positivus_Landing_Page/landing_Page.html
@@ -15,32 +15,32 @@
 
 <body>
     <header>
-                <nav>
-                    <div>
-                        <img src="./png/Logo.png" alt="Logo">
-                    </div>
-                <label>
-                       <input type="checkbox">
-                            <div class="toggle">
-                                <span class="top_line common"></span>
-                                <span class="middle_line common"></span>
-                                <span class="bottom_line common"></span>
-                            </div>
-                    <div class="nav slide">
-                        <li><a href="#">About us</a></li>
-                        <li><a href="#">Services</a></li>
-                        <li><a href="#">Use Cases</a></li>
-                        <li><a href="#">Pricing</a></li>
-                        <li><a href="#">Blog</a></li>
-                        <button class="btn1">Request a quote</button>
-                    </div>
-                </label>
-                </nav>
+        <nav>
+            <div>
+                <img src="./png/Logo.png" alt="Logo">
+            </div>
+            <label>
+                <input type="checkbox">
+                <div class="toggle">
+                    <span class="top_line common"></span>
+                    <span class="middle_line common"></span>
+                    <span class="bottom_line common"></span>
+                </div>
+                <div class="nav slide">
+                    <li><a href="#">About us</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Use Cases</a></li>
+                    <li><a href="#">Pricing</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <button class="btn1">Request a quote</button>
+                </div>
+            </label>
+        </nav>
     </header>
 
     <div class="main">
         <div class="left-sidebar">
-            <h1>Navigating the digital landscape for success</h1>
+            <h1 class="p-5">Navigating the digital landscape for success</h1>
             <p>Our digital marketing agency helps businesses grow and succeed online through a range of services
                 including
                 SEO, PPC, social media marketing, and content creation.</p>
@@ -50,6 +50,19 @@
         <div class="right-sidebar">
             <img src="./png/Illustration.png" alt="Illustration" class="image">
         </div>
+    </div>
+    <div class="center">
+        <img src="./png/Company logo.png" alt="amazon">
+        <img src="./png/Company logo (1).png" alt="tri">
+        <img src="./png/Company logo (2).png" alt="hubspot">
+        <img src="./png/Company logo (3).png" alt="notation">
+        <img src="./png/Company logo (4).png" alt="Netflix">
+        <img src="./png/Company logo (5).png" alt="zoom">
+    </div>
+    <div class="container-1">
+        <h1 class="service">Services</h1>
+        <p class="s-2">At our digital marketing agency, we offer a range of services to help businesses grow and succeed online.
+            These services include:</p>
     </div>
 </body>
 
