add card in files.

--- a/positivus_Landing_Page/landing_Page.html
+++ b/positivus_Landing_Page/landing_Page.html
@@ -64,6 +64,30 @@
         <p class="s-2">At our digital marketing agency, we offer a range of services to help businesses grow and succeed online.
             These services include:</p>
     </div>
+    <div class="container-2">
+        <div class="card card1">
+            <div class="left_side">
+                <h1><span class="select_1">Search engine optimization</span></h1>
+                <p class="icon"><img src="./png/Icon.png" alt="Icon">Learn more</p>
+            </div>
+            <div class="right_side">
+                <img class="img1" src="./png/tokyo.png" alt="tokyo">
+            </div>
+        </div>
+        <div class="card card2">
+            <div class="left_side">
+                <h1><span class="select_2">Search engine optimization</span></h1>
+                <p class="icon"><img src="./png/Icon.png" alt="Icon"></p>
+            </div>
+            <div class="right_side">
+                <img class="img1" src="./png/Illustration (1).png" alt="Illustration">
+            </div>
+        </div>
+        <div class="card_card3"></div>
+        <div class="card_card4"></div>
+        <div class="card_card5"></div>
+        <div class="card_card6"></div>
+    </div>
 </body>
 
 </html>
