remove sticky in header, set image .right class, and make black box.

--- a/positivus_Landing_Page/landing_Page.html
+++ b/positivus_Landing_Page/landing_Page.html
@@ -41,7 +41,8 @@
     <div class="main">
         <div class="left-sidebar">
             <h1 class="p-5">Navigating the digital landscape for success</h1>
-            <p>Our digital marketing agency helps businesses grow and succeed online through a range of services
+            <p class="normal">Our digital marketing agency helps businesses grow and succeed online through a range of
+                services
                 including
                 SEO, PPC, social media marketing, and content creation.</p>
             <button class="btn">Book a consultation
@@ -63,7 +64,8 @@
 
     <div class="container-1">
         <h1 class="service">Services</h1>
-        <p class="s-2">At our digital marketing agency, we offer a range of services to help businesses grow and succeed
+        <p class="normal">At our digital marketing agency, we offer a range of services to help businesses grow and
+            succeed
             online.
             These services include:</p>
     </div>
@@ -191,16 +193,69 @@
     <div class="container-3">
         <div class="left">
             <h3 class="medium">Let’s make things happen</h3>
-            <p class="m-4">Contact us today to learn more about how our digital  marketing services can help your business grow
-                and 
+            <p class="m-4">Contact us today to learn more about how our digital marketing services can help your
+                business grow
+                and
                 succeed online.</p>
             <button class="btn">Get your free proposal</button>
         </div>
         <div class="right">
-            <img src="./png/Frame 19.png" alt="Frame" width="359px" height="394.27px">
+            <img class="s-3" src="./png/Frame 19.png" alt="Frame" width="359px" height="394.27px">
         </div>
     </div>
 
+    <div class="container-4">
+        <h1 class="service">Case Studies</h1>
+        <p class="normal">Explore Real-Life Examples of Our Proven Digital Marketing Success through Our Case Studies
+        </p>
+    </div>
+
+    <div class="container-5">
+        <div class="center2">
+
+            <div class="left1">
+                <p class="white">For a local restaurant, we implemented a targeted PPC campaign that resulted in a 50%
+                    increase in website
+                    traffic and a 25% increase in sales.</p>
+            </div>
+
+            <div class="right1">
+                <label><a href="#">Learn more</a></label>
+                <img src="./png/Arrow 1.png" alt="Arrow">
+            </div>
+
+        </div>
+
+        <div class="center3">
+
+            <div class="left1">
+                <p class="white">For a local restaurant, we implemented a targeted PPC campaign that resulted in a 50%
+                    increase in website
+                    traffic and a 25% increase in sales.</p>
+            </div>
+
+            <div class="right1">
+                <label><a href="#">Learn more</a></label>
+                <img src="./png/Arrow 1.png" alt="Arrow">
+            </div>
+
+        </div>
+
+        <div class="center4">
+
+            <div class="left1">
+                <p class="white">For a local restaurant, we implemented a targeted PPC campaign that resulted in a 50%
+                    increase in website
+                    traffic and a 25% increase in sales.</p>
+            </div>
+
+            <div class="right1">
+                <label><a href="#">Learn more</a></label>
+                <img src="./png/Arrow 1.png" alt="Arrow">
+            </div>
+
+        </div>
+    </div>
 </body>
 
 </html>
