--- a/positivus_Landing_Page/landing_Page.html
+++ b/positivus_Landing_Page/landing_Page.html
@@ -256,6 +256,87 @@
 
         </div>
     </div>
+
+    <div class="container-4">
+        <h1 class="service">Our Working Process</h1>
+        <p class="normal">Step-by-Step Guide to Achieving Your Business Goals</p>
+    </div>
+
+    <div class="container-6">
+        <details>
+            <summary>
+                <div class="left2">
+                    <h1 class="font medium">01</h1> 
+                    <h3 class="font1 medium"><b>Consultation</b></h3>
+                </div>
+            </summary>
+            <p class="p1 .m-4">During the initial consultation, we will discuss your business goals and objectives, target audience, and
+                current marketing efforts. This will allow us to understand your needs and tailor our services to best
+                fit your requirements.</p>
+        </details>
+
+        <details>
+            <summary>
+                <div class="left2">
+                    <h1 class="font medium">02</h1> 
+                    <h3 class="font1 medium"><b>Research and Strategy Development</b></h3>
+                </div>
+            </summary>
+            <p class="p1 .m-4">During the initial consultation, we will discuss your business goals and objectives, target audience, and
+                current marketing efforts. This will allow us to understand your needs and tailor our services to best
+                fit your requirements.</p>
+        </details>
+
+        <details>
+            <summary>
+                <div class="left2">
+                    <h1 class="font medium">03</h1> 
+                    <h3 class="font1 medium"><b>Implementation</b></h3>
+                </div>
+            </summary>
+            <p class="p1 .m-4">During the initial consultation, we will discuss your business goals and objectives, target audience, and
+                current marketing efforts. This will allow us to understand your needs and tailor our services to best
+                fit your requirements.</p>
+        </details>
+
+        <details>
+            <summary>
+                <div class="left2">
+                    <h1 class="font medium">04</h1> 
+                    <h3 class="font1 medium"><b>Monitoring and Optimization</b></h3>
+                </div>
+            </summary>
+            <p class="p1 .m-4">During the initial consultation, we will discuss your business goals and objectives, target audience, and
+                current marketing efforts. This will allow us to understand your needs and tailor our services to best
+                fit your requirements.</p>
+        </details>
+
+        <details>
+            <summary>
+                <div class="left2">
+                    <h1 class="font medium">05</h1> 
+                    <h3 class="font1 medium"><b>Reporting and Communication</b></h3>
+                </div>
+            </summary>
+            <p class="p1 .m-4">During the initial consultation, we will discuss your business goals and objectives, target audience, and
+                current marketing efforts. This will allow us to understand your needs and tailor our services to best
+                fit your requirements.</p>
+        </details>
+
+        <details>
+            <summary>
+                <div class="left2">
+                    <h1 class="font medium">06</h1> 
+                    <h3 class="font1 medium"><b>Continual Improvement</b></h3>
+                </div>
+            </summary>
+            <p class="p1 .m-4">During the initial consultation, we will discuss your business goals and objectives, target audience, and
+                current marketing efforts. This will allow us to understand your needs and tailor our services to best
+                fit your requirements.</p>
+        </details>
+    </div>
+    
+    
 </body>
 
 </html>
