--- a/positivus_Landing_Page/landing_Page.html
+++ b/positivus_Landing_Page/landing_Page.html
@@ -200,7 +200,8 @@
             <button class="btn">Get your free proposal</button>
         </div>
         <div class="right">
-            <img class="s-3" src="./png/Frame 19.png" alt="Frame" width="359px" height="394.27px">
+            <img class="s-3" src="./png/Frame 19.png" alt="Frame" >
+            <!-- width="259px" height="280px" -->
         </div>
     </div>
 
@@ -266,11 +267,12 @@
         <details>
             <summary>
                 <div class="left2">
-                    <h1 class="font medium">01</h1> 
+                    <h1 class="font medium">01</h1>
                     <h3 class="font1 medium"><b>Consultation</b></h3>
                 </div>
             </summary>
-            <p class="p1 .m-4">During the initial consultation, we will discuss your business goals and objectives, target audience, and
+            <p class="p1 .m-4">During the initial consultation, we will discuss your business goals and objectives,
+                target audience, and
                 current marketing efforts. This will allow us to understand your needs and tailor our services to best
                 fit your requirements.</p>
         </details>
@@ -278,11 +280,12 @@
         <details>
             <summary>
                 <div class="left2">
-                    <h1 class="font medium">02</h1> 
+                    <h1 class="font medium">02</h1>
                     <h3 class="font1 medium"><b>Research and Strategy Development</b></h3>
                 </div>
             </summary>
-            <p class="p1 .m-4">During the initial consultation, we will discuss your business goals and objectives, target audience, and
+            <p class="p1 .m-4">During the initial consultation, we will discuss your business goals and objectives,
+                target audience, and
                 current marketing efforts. This will allow us to understand your needs and tailor our services to best
                 fit your requirements.</p>
         </details>
@@ -290,11 +293,12 @@
         <details>
             <summary>
                 <div class="left2">
-                    <h1 class="font medium">03</h1> 
+                    <h1 class="font medium">03</h1>
                     <h3 class="font1 medium"><b>Implementation</b></h3>
                 </div>
             </summary>
-            <p class="p1 .m-4">During the initial consultation, we will discuss your business goals and objectives, target audience, and
+            <p class="p1 .m-4">During the initial consultation, we will discuss your business goals and objectives,
+                target audience, and
                 current marketing efforts. This will allow us to understand your needs and tailor our services to best
                 fit your requirements.</p>
         </details>
@@ -302,11 +306,12 @@
         <details>
             <summary>
                 <div class="left2">
-                    <h1 class="font medium">04</h1> 
+                    <h1 class="font medium">04</h1>
                     <h3 class="font1 medium"><b>Monitoring and Optimization</b></h3>
                 </div>
             </summary>
-            <p class="p1 .m-4">During the initial consultation, we will discuss your business goals and objectives, target audience, and
+            <p class="p1 .m-4">During the initial consultation, we will discuss your business goals and objectives,
+                target audience, and
                 current marketing efforts. This will allow us to understand your needs and tailor our services to best
                 fit your requirements.</p>
         </details>
@@ -314,11 +319,12 @@
         <details>
             <summary>
                 <div class="left2">
-                    <h1 class="font medium">05</h1> 
+                    <h1 class="font medium">05</h1>
                     <h3 class="font1 medium"><b>Reporting and Communication</b></h3>
                 </div>
             </summary>
-            <p class="p1 .m-4">During the initial consultation, we will discuss your business goals and objectives, target audience, and
+            <p class="p1 .m-4">During the initial consultation, we will discuss your business goals and objectives,
+                target audience, and
                 current marketing efforts. This will allow us to understand your needs and tailor our services to best
                 fit your requirements.</p>
         </details>
@@ -326,17 +332,132 @@
         <details>
             <summary>
                 <div class="left2">
-                    <h1 class="font medium">06</h1> 
+                    <h1 class="font medium">06</h1>
                     <h3 class="font1 medium"><b>Continual Improvement</b></h3>
                 </div>
             </summary>
-            <p class="p1 .m-4">During the initial consultation, we will discuss your business goals and objectives, target audience, and
+            <p class="p1 .m-4">During the initial consultation, we will discuss your business goals and objectives,
+                target audience, and
                 current marketing efforts. This will allow us to understand your needs and tailor our services to best
                 fit your requirements.</p>
         </details>
     </div>
-    
-    
+
+    <div class="container-4">
+        <h1 class="service">Team</h1>
+        <p class="normal">Meet the skilled and experienced team behind our successful digital marketing strategies</p>
+    </div>
+
+    <div class="container-7">
+        <div class="center5">
+            <div class="top">
+                <div class="left3">
+                    <img src="./png/Picture.png" alt="Picture" class="pic1">
+                </div>
+                <div class="right3">
+                    <img src="./png/linkedin.png" alt="linkedin" class="pic2">
+                    <div  class="text3">
+                        <h3 class="p-5">John Smith</h3>
+                        <h3 class="m-4">CEO and Founder</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="bottom">
+                    <p class="m-4">10+ years of experience in digital  marketing. Expertise in SEO, PPC, and content strategy </p>
+            </div>
+        </div>
+
+        <div class="center5">
+            <div class="top">
+                <div class="left3">
+                    <img src="./png/Mask group.png" alt="Picture" class="pic1">
+                </div>
+                <div class="right3">
+                    <img src="./png/linkedin.png" alt="linkedin" class="pic2">
+                    <div  class="text3">
+                        <h3 class="p-5">John Smith</h3>
+                        <h3 class="m-4">CEO and Founder</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="bottom">
+                    <p class="m-4">10+ years of experience in digital  marketing. Expertise in SEO, PPC, and content strategy </p>
+            </div>
+        </div>
+
+        <div class="center5">
+            <div class="top">
+                <div class="left3">
+                    <img src="./png/Picture (1).png" alt="Picture" class="pic1">
+                </div>
+                <div class="right3">
+                    <img src="./png/linkedin.png" alt="linkedin" class="pic2">
+                    <div  class="text3">
+                        <h3 class="p-5">John Smith</h3>
+                        <h3 class="m-4">CEO and Founder</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="bottom">
+                    <p class="m-4">10+ years of experience in digital  marketing. Expertise in SEO, PPC, and content strategy </p>
+            </div>
+        </div>
+
+        <div class="center5">
+            <div class="top">
+                <div class="left3">
+                    <img src="./png/Picture.png" alt="Picture" class="pic1">
+                </div>
+                <div class="right3">
+                    <img src="./png/linkedin.png" alt="linkedin" class="pic2">
+                    <div  class="text3">
+                        <h3 class="p-5">John Smith</h3>
+                        <h3 class="m-4">CEO and Founder</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="bottom">
+                    <p class="m-4">10+ years of experience in digital  marketing. Expertise in SEO, PPC, and content strategy </p>
+            </div>
+        </div>
+
+        <div class="center5">
+            <div class="top">
+                <div class="left3">
+                    <img src="./png/Picture (3).png" alt="Picture" class="pic1">
+                </div>
+                <div class="right3">
+                    <img src="./png/linkedin.png" alt="linkedin" class="pic2">
+                    <div  class="text3">
+                        <h3 class="p-5">John Smith</h3>
+                        <h3 class="m-4">CEO and Founder</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="bottom">
+                    <p class="m-4">10+ years of experience in digital  marketing. Expertise in SEO, PPC, and content strategy </p>
+            </div>
+        </div>
+
+        <div class="center5">
+            <div class="top">
+                <div class="left3">
+                    <img src="./png/Picture (4).png" alt="Picture" class="pic1">
+                </div>
+                <div class="right3">
+                    <img src="./png/linkedin.png" alt="linkedin" class="pic2">
+                    <div  class="text3">
+                        <h3 class="p-5">John Smith</h3>
+                        <h3 class="m-4">CEO and Founder</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="bottom">
+                    <p class="m-4">10+ years of experience in digital  marketing. Expertise in SEO, PPC, and content strategy </p>
+            </div>
+        </div>
+    </div>
+
 </body>
 
 </html>
